# authserver-py

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  JWKS_RS256_SETUP.md  Makefile  README.md  SCALING.md  SECURITY.md  TESTING.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest-docker.ini  pytest.ini  run.py
alembic/: env.py
alembic/versions/: 0efb8aad1742_add_client_secret_rotation_tracking.py  144b0983b7f6_update_all_datetime_columns_to_timezone_.py  2c23c33a05c0_update_backup_codes_expiry_to_timezone_.py  2f14a3e76250_add_oauth2_authorization_code_table.py  3686ea96436b_initial_migration_create_users_table.py  5001f6917f8e_add_foreign_key_constraint_audit_log_.py  5294402d81ae_add_performance_indexes_for_common_.py  7a631acb6fae_initial_migration_create_all_auth_.py  7b0fdc8e29d7_add_oauth2_client_tokens_table.py  b0f1a6ba609b_update_users_table_created_at_and_.py  b8db72cfb6d4_add_user_token_table_for_token_tracking_.py  c82c94bc188d_add_grant_types_column_to_oauth2_.py  d3133ef98f6e_add_nonce_to_authorization_codes.py  fc8f4db70ead_add_password_reset_token_table.py
app/: main.py  routers.py
app/api/: __init__.py
app/core/: RBAC_USAGE.md  audit.py  auth.py  cache.py  config.py  crypto.py  (+11 more)
frontend/: .dockerignore  QUICKSTART.md  README.md  callback.html  index.html  login.html  oauth.js  serve.py  styles.css
scripts/: dev.sh  generate_rsa_keys.py  migrate_fresh.py  seed_db.py  setup_db.py  test.sh
tasks/: prd-auth-server.md  tasks-prd-auth-server.md
tests/: __init__.py  conftest.py
(+52 files in other folders)
